# Kurimod

./: .gitignore  NOTICE  README.md  pyproject.toml
Kurimod/: __init__.py  config.py
Kurimod/helpers/: __init__.py
Kurimod/listen/: __init__.py  callback_query_handler.py  client.py  message_handler.py
Kurimod/nav/: __init__.py  pagination.py
Kurimod/types/: identifier.py
Kurimod/utils/: __init__.py  patch.py
docs/: docusaurus.config.js  package.json
docs/docs/: intro.md
docs/docs/getting-started/: installation.md  intro.md
docs/docs/release-notes/: v2-0-0.md  v2-1-0.md  v3-0-0.md  v3-1-0.md  v3-2-0.md
docs/src/components/ChatSimulator/: index.jsx
docs/src/components/KurimodCodeBox/: index.jsx
docs/src/css/: custom.css
docs/src/pages/: index.js
docs/src/theme/: Root.js
