[project]
name = "Kurimod"
version = "3.4.0"
description = "A monkeypatcher add-on for Kurigram that does conversation handling"
authors = [
    { name = "JoyC", email = "joyc.vndm@gmail.com" }
]
dependencies = [
    "kurigram",
    "pyaes>=1.6.1",
    "python-socks>=2.8.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/joyccn/Kurimod"
Repository = "https://github.com/joyccn/Kurimod"
Documentation = "https://joyccn.github.io/Kurimod"
"Bug Tracker" = "https://github.com/joyccn/Kurimod/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["Kurimod"]

[tool.uv.sources]
kurigram = { git = "https://github.com/KurimuzonAkuma/kurigram" }
